syntax = "proto2";
package basepb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Metadata {
	optional uint64 NodeID    = 1 [(gogoproto.nullable) = false];
	optional uint64 ClusterID = 2 [(gogoproto.nullable) = false];
}

message ServiceSnapshot {
	optional bytes  data	= 1;
	optional string	id 		= 2 [(gogoproto.nullable) = false];
}

message ServiceSnapshotPack {
	repeated ServiceSnapshot snapshots = 1;
}
