syntax = "proto2";
package clusterpb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Request {
	optional uint64 ID         =  1 [(gogoproto.nullable) = false];
	optional string serviceID  =  2 [(gogoproto.nullable) = false];
	optional string action     =  3 [(gogoproto.nullable) = false];
	optional bytes  data       =  4 [(gogoproto.nullable) = true];
	optional int64  syncTime   =  5 [(gogoproto.nullable) = false];
}
